# fastbreak

./: .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md
.github/workflows/: build.yml
Assets/Scripts/: SimulationUIController.cs
app/: bridge_main.cpp
engine/: BUILD.bazel  CMakeLists.txt  engine.cpp
engine/api/: dtos.hpp  json.cpp  json.hpp  simulation_engine.cpp  simulation_engine.hpp
engine/core/: rng.hpp
engine/franchise/: franchise_engine.cpp  franchise_engine.hpp
engine/game/: game_simulator.cpp  game_simulator.hpp  game_state.hpp  manager_command.hpp
engine/model/: player.hpp
engine/persistence/: sqlite_store.cpp  sqlite_store.hpp
engine/sim/: possession_resolver.cpp  possession_resolver.hpp
tests/: franchise_test.cpp  persistence_test.cpp  smoke.cpp
unity/Assets/Scripts/: SimulationBridgeClient.cs  SimulationDebugController.cs  SimulationUIController.cs
