load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "fastbreak_smoke",
    srcs = ["tests/smoke.cpp"],
    deps = ["//engine:fastbreak_engine"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20"],
        "//conditions:default": ["-std=c++20"],
    }),
)

cc_binary(
    name = "fastbreak_bridge",
    srcs = ["app/bridge_main.cpp"],
    deps = ["//engine:fastbreak_engine"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20"],
        "//conditions:default": ["-std=c++20"],
    }),
)
