load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "fastbreak_smoke",
    srcs = ["tests/smoke.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20"],
        "//conditions:default": ["-std=c++20"],
    }),
    deps = ["//engine:fastbreak_engine"],
)

cc_binary(
    name = "fastbreak_bridge",
    srcs = ["app/bridge_main.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20"],
        "//conditions:default": ["-std=c++20"],
    }),
    deps = ["//engine:fastbreak_engine"],
)

cc_binary(
    name = "fastbreak_persistence_test",
    srcs = ["tests/persistence_test.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20"],
        "//conditions:default": ["-std=c++20"],
    }),
    deps = ["//engine:fastbreak_engine"],
)

cc_binary(
    name = "fastbreak_franchise_test",
    srcs = ["tests/franchise_test.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20"],
        "//conditions:default": ["-std=c++20"],
    }),
    deps = ["//engine:fastbreak_engine"],
)
