module(
    name = "fastbreak",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.0.17")

cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
use_repo(cc_configure, "local_config_cc", "local_config_cc_toolchains")

register_toolchains("@local_config_cc_toolchains//:all")
