load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "fastbreak_engine",
    srcs = [
        "api/json.cpp",
        "api/simulation_engine.cpp",
        "engine.cpp",
        "game/game_simulator.cpp",
        "sim/possession_resolver.cpp",
    ],
    hdrs = [
        "api/dtos.hpp",
        "api/json.hpp",
        "api/simulation_engine.hpp",
        "core/rng.hpp",
        "game/game_simulator.hpp",
        "game/game_state.hpp",
        "game/manager_command.hpp",
        "model/player.hpp",
        "sim/possession_resolver.hpp",
    ],
    copts = select({
        "@bazel_tools//src/conditions:windows": [
            "/std:c++20",
            "/W4",
        ],
        "//conditions:default": [
            "-std=c++20",
            "-Wall",
            "-Wextra",
            "-Wpedantic",
        ],
    }),
    visibility = ["//visibility:public"],
)
