load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "fastbreak_engine",
    srcs = [
        "api/json.cpp",
        "api/simulation_engine.cpp",
        "engine.cpp",
        "franchise/franchise_engine.cpp",
        "game/game_simulator.cpp",
        "persistence/sqlite_store.cpp",
        "sim/possession_resolver.cpp",
    ],
    hdrs = [
        "api/dtos.hpp",
        "api/json.hpp",
        "api/simulation_engine.hpp",
        "core/rng.hpp",
        "franchise/franchise_engine.hpp",
        "game/game_simulator.hpp",
        "game/game_state.hpp",
        "game/manager_command.hpp",
        "model/player.hpp",
        "persistence/sqlite_store.hpp",
        "sim/possession_resolver.hpp",
    ],
    copts = select({
        "@bazel_tools//src/conditions:windows": [
            "/std:c++20",
            "/W4",
        ],
        "//conditions:default": [
            "-std=c++20",
            "-Wall",
            "-Wextra",
            "-Wpedantic",
        ],
    }),
    linkopts = select({
        "@bazel_tools//src/conditions:windows": ["sqlite3.lib"],
        "//conditions:default": ["-lsqlite3"],
    }),
    visibility = ["//visibility:public"],
)
